--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "eslint": "^9.10.0",
     "nodemon": "^3.1.5",
